--- a/src/app/names-uploader/names-uploader.component.html
+++ b/src/app/names-uploader/names-uploader.component.html
@@ -1,15 +1,16 @@
 <div class="">
-    <div class="modal-video">
-        <div *ngIf="displayedColumns.length > 0" class="modal-content">
-            <!-- Botón para agregar una nueva fila -->
-            <button mat-fab color="primary" (click)="addRow()" style="margin-bottom: 10px;">
-                +
-            </button>
-            <div #hotContainer class="handsontable-container"></div>
-            <div class="content-button">
-                <button mat-button (click)="cancel()">Cancel</button>
-                <button mat-button (click)="saveChanges()">Save</button>
-            </div>
-        </div>
+  <div class="modal-video">
+    <div *ngIf="displayedColumns.length > 0" class="modal-content">
+      <!-- Botones para agregar nuevas filas y columnas -->
+
+      <button mat-button (click)="addRow()">Add Row</button>
+
+      <div #hotContainer class="handsontable-container"></div>
+      <div class="content-button">
+        <button mat-button (click)="cancel()">Cancel</button>
+        <button mat-button (click)="saveChanges()">Save</button>
+      </div>
     </div>
+  </div>
 </div>
+
