--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,10 +49,16 @@ thead {
     display: flex;
     justify-content: center;
     width: 100%;
-
 }
 
-.ht_master:not(.innerBorderInlineStart):not(.emptyColumns) tbody tr th, .ht_master:not(.innerBorderInlineStart):not(.emptyColumns) thead tr th:first-child, .ht_master:not(.innerBorderInlineStart):not(.emptyColumns)~.handsontable:not(.htGhostTable) tbody tr th, .ht_master:not(.innerBorderInlineStart):not(.emptyColumns)~.handsontable:not(.ht_clone_top):not(.htGhostTable) thead tr th:first-child {
+.ht_master:not(.innerBorderInlineStart):not(.emptyColumns) tbody tr th,
+.ht_master:not(.innerBorderInlineStart):not(.emptyColumns) thead tr th:first-child,
+.ht_master:not(.innerBorderInlineStart):not(.emptyColumns) ~ .handsontable:not(.htGhostTable) tbody tr th,
+.ht_master:not(.innerBorderInlineStart):not(.emptyColumns)
+    ~ .handsontable:not(.ht_clone_top):not(.htGhostTable)
+    thead
+    tr
+    th:first-child {
     width: 0px;
     /* border-left: 1px solid #ccc; */
     border-right-width: 0;
@@ -63,4 +69,9 @@ thead {
 .handsontable .relative {
     position: relative;
     display: none;
+}
+
+.handsontable .wtHider {
+    overflow-x: auto;
+    overflow-y: hidden;
 }
