--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -743,5 +743,5 @@ align-items: center; ">
 [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
 
 
-<app-names-uploader *ngIf="showFileUploader"  (save)="showFileUploader = false" [displayedColumns]="columnsNames"
+<app-names-uploader *ngIf="showFileUploader"  (save)="showFileUploader = false;upLoadNamesAndRationales(testNamesInput, false)" [displayedColumns]="columnsNames"
 [dataSource]="dataSource"  (cancelEvent)="showFileUploader = false"></app-names-uploader>
