--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -21,7 +21,8 @@
     <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="page-overview">
         <!-- RATE -->
 
-        <div *ngIf="this.bmxItem.componentSettings[0].rankType != 'dinamycRadio'" style="display: flex;flex-direction: column;align-items: center;">
+        <div *ngIf="this.bmxItem.componentSettings[0].rankType != 'dinamycRadio'"
+            style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">rank
             </p>
             <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
@@ -50,7 +51,8 @@
 
         <!-- COMMENTS -->
 
-        <div *ngIf="columnsNames.includes('Comments0')" style="display: flex;flex-direction: column;align-items: center;">
+        <div *ngIf="columnsNames.includes('Comments0')"
+            style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">comments
             </p>
             <input type="range" style="margin: 20px;width: 50px;"
@@ -59,7 +61,8 @@
         </div>
 
         <!-- REST OF THE COLUMNS -->
-        <div *ngIf="columnsNames.includes('ExtraColumn1')" style="display: flex;flex-direction: column;align-items: center;">
+        <div *ngIf="columnsNames.includes('ExtraColumn1')"
+            style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">other columns
             </p>
             <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].columnWidth"
@@ -162,8 +165,8 @@
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
 
-        <button (click)="showFileUploader = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
-            *ngIf="i !== selectedIndex" mat-icon-button>
+        <button (click)="showFileUploader = true" class="add-column" matTooltip="update names"
+            matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">text_fields</mat-icon>
         </button>
     </div>
@@ -174,11 +177,9 @@
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4 config-box" cdkDrag >
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4 config-box" cdkDrag>
 
-    <div class="example-handle" cdkDragHandle
-        ><svg
-            width="24px" fill="currentColor" viewBox="0 0 24 24">
+    <div class="example-handle" cdkDragHandle><svg width="24px" fill="currentColor" viewBox="0 0 24 24">
             <path
                 d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
             </path>
@@ -246,10 +247,11 @@
                     <div>
                         <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RANK</div>
                         <br>
-                        <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
+                        <div
+                            style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
                             <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
-                            (change)="rankingTableType(this.bmxItem.componentSettings[0].rankType)"
-                            [max]="this.rowsCount">
+                                (change)="rankingTableType(this.bmxItem.componentSettings[0].rankType)"
+                                [max]="this.rowsCount">
                             {{rankingScaleValue}}
                         </div>
                     </div>
@@ -323,8 +325,7 @@
                             {{bmxItem.componentSettings[0].maxRule}}
                         </div>
                         <input type="number" min="0" [max]="rowsCount"
-                            [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width:53px; padding: 0px 10px;"
-                           >
+                            [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width:53px; padding: 0px 10px;">
                     </div>
                     <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
                 </div>
@@ -447,8 +448,9 @@
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
 
                 <div *ngFor="let columnName of columnsNames; let e =  index"
-                    style="display: flex;align-items: center;justify-content: center; flex-direction: column;" [ngClass]="(e%2==0)?'red':'blue'"
-                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
+                    style="display: flex;align-items: center;justify-content: center; flex-direction: column;"
+                    [ngClass]="(e%2==0)?'red':'blue'" [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'"
+                    [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
                 (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
                 (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
                 (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
@@ -474,7 +476,7 @@
                             (mouseleave)="selectedColumn = ''">
                             <span class="header-delete-icon" matTooltip="double click to delete column"
                                 matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
-                                <mat-icon style="cursor: pointer;" matTooltip="move column to the left"
+                            <mat-icon style="cursor: pointer;" matTooltip="move column to the left"
                                 matTooltipPosition="above" (click)="swapColumnsLeft(e)">chevron_left</mat-icon>
                             <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
                         </div>
@@ -484,7 +486,8 @@
 
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                    <div [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
+                    <div
+                        [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
                         <!-- IF ELSE TEMPLATE INPUTS  -- BELOW RADION BUTTONS COLUMN -->
                         <input type="radio" *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true"
                             [name]="columnName + i" [checked]="testName[columnName]"
@@ -611,8 +614,9 @@
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
 
                 <div *ngFor="let columnName of columnsNames; let e =  index"
-                    style="display: flex;align-items: center;justify-content: center; flex-direction: column;" [ngClass]="(e%2==0)?'red':'blue'"
-                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
+                    style="display: flex;align-items: center;justify-content: center; flex-direction: column;"
+                    [ngClass]="(e%2==0)?'red':'blue'" [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'"
+                    [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
                     (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
                     (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
                     (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
@@ -621,7 +625,7 @@
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
-                    <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e" >
+                    <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e">
                         <div>
                             <textarea *ngIf="editSingleTableCells"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
@@ -638,7 +642,7 @@
                             (mouseleave)="selectedColumn = ''">
                             <span class="header-delete-icon" matTooltip="double click to delete column"
                                 matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
-                                <mat-icon style="cursor: pointer;" matTooltip="move column to the left"
+                            <mat-icon style="cursor: pointer;" matTooltip="move column to the left"
                                 matTooltipPosition="above" (click)="swapColumnsLeft(e)">chevron_left</mat-icon>
 
                             <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
@@ -650,7 +654,8 @@
 
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                    <div [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
+                    <div
+                        [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
                         <!-- IF ELSE TEMPLATE INPUTS  -- BELOW RADION BUTTONS COLUMN -->
                         <input type="radio"
                             *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true && (this.rankingType == 'radio')"
@@ -663,18 +668,12 @@
                             (click)="saveRadioColumValue(columnName, y);">
 
                         <!-- TEXT_AREA COLUMN COMMENTS-->
-                        <textarea *ngIf="y !== 0 && columnName.includes('Comments')"
-                        cdkTextareaAutosize
-                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                        [cdkAutosizeMaxRows]="10"
-                        [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
-                        [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'"
-                        [style.textAlign]="'center'"
-                        [style.border]="'1px solid #dddddd'"
-                        class="row-box"
-                        [style.height]="'132px'"
-
-                        [(ngModel)]="testName[columnName]">
+                        <textarea *ngIf="y !== 0 && columnName.includes('Comments')" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" [cdkAutosizeMaxRows]="10"
+                            [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
+                            [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'" [style.textAlign]="'center'"
+                            [style.border]="'1px solid #dddddd'" class="row-box" [style.height]="'132px'"
+                            [(ngModel)]="testName[columnName]">
               </textarea>
 
 
@@ -796,7 +795,8 @@
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
 
-                    <div [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
+                    <div
+                        [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
 
                         <!-- IF ELSE TEMPLATE INPUTS  -->
                         <div style="background-color: lightgray;">
@@ -916,7 +916,8 @@
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                    <div [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
+                    <div
+                        [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
 
                         <!-- IF ELSE TEMPLATE INPUTS  -->
                         <div style="background-color: lightgray;">
@@ -1001,5 +1002,7 @@
 <app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames"
     [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
 
-    <app-names-uploader *ngIf="showFileUploader"  (save)="showFileUploader = false;upLoadNamesAndRationales(testNamesInput, false)" [displayedColumns]="columnsNames"
-[dataSource]="dataSource" [isRanking]="bmxItem.componentType"  (cancelEvent)="showFileUploader = false"></app-names-uploader>
+<app-names-uploader *ngIf="showFileUploader"
+    (save)="upLoadNamesAndRationales(testNamesInput, false); showFileUploader = false" [displayedColumns]="columnsNames"
+    [dataSource]="dataSource" [isRanking]="bmxItem.componentType"
+    (cancelEvent)="cancelEvent($event)"></app-names-uploader>
