--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -346,7 +346,7 @@
         </div>
         <div class="button-Done" style="display: flex; flex-direction: column; align-items: center;">
             <button style="outline: none;color:#76d354;   font-size: 21px;" mat-icon-button
-                (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, false)" [disabled]="false"
+                (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, false, true)" [disabled]="false"
                 aria-label="ranking">
                 <mat-icon>check_circle</mat-icon>
             </button>
@@ -995,6 +995,6 @@
     [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
 
 <app-names-uploader *ngIf="showFileUploader"
-    (save)="upLoadNamesAndRationales(testNamesInput, false); showFileUploader = false" [displayedColumns]="columnsNames"
+    (save)="upLoadNamesAndRationales(testNamesInput, false,false); showFileUploader = false" [displayedColumns]="columnsNames"
     [dataSource]="dataSource" [isRanking]="bmxItem.componentType"
     (cancelEvent)="cancelEvent($event)"></app-names-uploader>
