--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -61,7 +61,7 @@
         </div>
 
         <!-- REST OF THE COLUMNS -->
-        <div *ngIf="columnsNames.includes('ExtraColumn1')"
+        <div
             style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">other columns
             </p>
