--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -123,21 +123,22 @@ style="display: flex;flex-direction: column;gap: 2px;">
             <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
         </button>
 
-        <button (click)="editSingleTableCells = !editSingleTableCells"
-            [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
-            matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
-        </button>
     </div>
-    <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
+    <!--<button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
         matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
-    </button>
+    </button>-->
 
     <button  (click)="insertAnswerColumn(); editSingleTableCells = false" class="add-column"
         matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
     </button>
+    
+    <button (click)="editSingleTableCells = !editSingleTableCells"
+    [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
+    matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
+</button>
     <button (click)="isColumnResizerOn = !isColumnResizerOn;editSingleTableCells = false"
         [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" matTooltip="columns width"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
