--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -67,9 +67,8 @@
         <div class="row-field">
           <label class="selectLabels">Closing date: </label>
           <mat-form-field appearance="outline" id="project-datepicker" style="width:55%">
-            <input matInput [matDatepicker]="picker" placeholder="Choose a date" 
+            <input matInput [matDatepicker]="picker" placeholder="Choose a date" [value]="selectedDate"
                    (dateChange)="onSelect($event.value)"
-                   formControlName="bmxClosingDate" 
                    [min]="minDate">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
