--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -143,17 +143,11 @@ style="display: flex;flex-direction: column;gap: 2px;">
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
         </button>
-        <button (click)="editSingleTableCells = !editSingleTableCells"
-            [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
-            matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
-        </button>
     </div>
-
-    <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
+    <!-- <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
         matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
-    </button>
+    </button>-->
     <button  (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
         matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
@@ -163,13 +157,19 @@ style="display: flex;flex-direction: column;gap: 2px;">
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
     </button>
+    
+    <button (click)="editSingleTableCells = !editSingleTableCells"
+    [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
+    matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
+</button>
     <button (click)="selectedIndex = i; editSingleTableCells = false; verifyCritera()" class="add-column"
         matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
     </button>
-    <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
+    <button (click)="showFileUploader = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
         *ngIf="i !== selectedIndex" mat-icon-button>
-        <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
+        <mat-icon style="font-size: 25px;" class="full-icon">text_fields</mat-icon>
     </button>
 </div>
 </div>
@@ -188,28 +188,6 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </svg></div>
 
 <!-- Cards Test Name-->
-<mat-card class="example-card">
-    <mat-card-header>
-        <mat-card-title>Columns</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <div style="text-align: center;">
-            <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste Columns</div>
-            <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-        </div>
-        <div style="display: flex; justify-content: center; align-items: center;">
-            <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
-                <mat-label>Copy & Paste Columns</mat-label>
-                <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
-                    (ngModelChange)="upLoadNamesAndRationales(testNamesInput)" placeholder="Paste test names here"
-                    cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
-                <mat-hint>Type or paste the test names here that you want to include</mat-hint>
-            </mat-form-field>
-        </div>
-
-    </mat-card-content>
-
-</mat-card>
 <br>
 
 <mat-card class="example-card">
@@ -260,7 +238,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
                         style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
 
                         <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
-                            max="10">
+                            max="10" >
                         {{rankingScaleValue}}
                     </div>
                 </div>
@@ -359,7 +337,7 @@ align-items: center; ">
 
     <div class="button-Done" style="display: flex; flex-direction: column; align-items: center;">
         <button style="outline: none;color:#76d354;" mat-icon-button
-            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
+            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, false, true)" [disabled]="false"
             aria-label="ranking">
             <mat-icon>check_circle</mat-icon>
         </button>
@@ -541,7 +519,7 @@ align-items: center; ">
                     <textarea *ngIf="y !== 0 && columnName.includes('Comments')"
                     cdkTextareaAutosize
                     [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                    [cdkAutosizeMaxRows]="10" 
+                    [cdkAutosizeMaxRows]="10"
                     [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
                     [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'"
                     [style.textAlign]="'center'"
@@ -551,7 +529,7 @@ align-items: center; ">
 
                     [(ngModel)]="testName[columnName]">
           </textarea>
-          
+
 
                     <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
                     <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
@@ -764,3 +742,6 @@ align-items: center; ">
 <!--📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱 END TABLE GENERATOR 📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱-->
 <app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames"
 [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
+
+<app-names-uploader *ngIf="showFileUploader"  (save)="upLoadNamesAndRationales(testNamesInput, false, false); showFileUploader = false" [displayedColumns]="columnsNames"
+[dataSource]="dataSource" [isRanking]="bmxItem.componentType"  (cancelEvent)="cancelEvent($event)"></app-names-uploader>
