--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -16,9 +16,7 @@
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview" class="overview">
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
-    <div *ngIf="isColumnResizerOn" class="" style="display: flex;
-        flex-direction: row;
-        justify-content: start;background: #ffffffd9;
+    <div *ngIf="isColumnResizerOn" class="" style="display: flex;flex-direction: row;justify-content: start;background: #ffffffd9;
         gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;">
 
         <!-- NAME CANDIATES -->
@@ -125,16 +123,12 @@
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
             </button>
-            <button (click)="editSingleTableCells = !editSingleTableCells"
-                [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
-                matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
-            </button>
+            
         </div>
-        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
+       <!--  <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
             matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
-        </button>
+        </button>-->
         <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
             matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
@@ -144,54 +138,44 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
+        <button (click)="editSingleTableCells = !editSingleTableCells"
+                [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
+                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+                <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
+            </button>
         <button (click)="selectedIndex = i; editSingleTableCells = false; verifyCritera()" class="add-column"
             matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-        <button (click)="showModalTable = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
+
+        <button (click)="showFileUploader = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
-            <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
+            <mat-icon style="font-size: 25px;" class="full-icon">text_fields</mat-icon>
         </button>
+
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑 CONFIGURATION BOX 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;
-background: #fafafa;z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto;
-   max-height: 36rem;
-bottom: -2; ">
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;
+    z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto; max-height: 36rem;bottom: -2; ">
 
-    <div class="example-handle" cdkDragHandle style="display: flex;
-flex-direction: row;
-justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor"
+    <div class="example-handle" cdkDragHandle style="display: flex;flex-direction: row;justify-content: center;
+            cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor"
             viewBox="0 0 24 24">
             <path
                 d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
             </path>
             <path d="M0 0h24v24H0z" fill="none"></path>
-        </svg></div>
+        </svg>
+    </div>
 
     <!-- Cards Test Name-->
     <mat-card class="example-card">
         <mat-card-header>
             <mat-card-title>Columns</mat-card-title>
         </mat-card-header>
-        <mat-card-content>
-            <div style="text-align: center;">
-                <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste Columns</div>
-                <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-            </div>
-            <div style="display: flex; justify-content: center; align-items: center;">
-                <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
-                    <mat-label>Copy & Paste Columns </mat-label>
-                    <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
-                        (ngModelChange)="upLoadNamesAndRationales(testNamesInput)" placeholder="Paste test names here"
-                        cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
-                    <mat-hint>Type or paste the test names here that you want to include</mat-hint>
-                </mat-form-field>
-            </div>
 
-        </mat-card-content>
 
     </mat-card>
     <br>
@@ -297,8 +281,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
             <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
             <div class="sm-row-box-rkScale">
                 <div>
-                    <div
-                        style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
+                    <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
                         <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
                             {{bmxItem.componentSettings[0].minRule}}
                         </div>
@@ -309,8 +292,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
                 </div>
                 <div>
-                    <div
-                        style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
+                    <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
                         <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximum:
                             {{bmxItem.componentSettings[0].maxRule}}
                         </div>
@@ -324,18 +306,13 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
         </div>
         <mat-card-content>
-
         </mat-card-content>
-
     </mat-card>
     <br>
 
-
     <!-- BUTTON-->
     <div class="sm-row-box-rkScale">
-        <div class="button-cancel" style=" display: flex;
-  flex-direction: column;
-  align-items: center; ">
+        <div class="button-cancel" style=" display: flex;flex-direction: column; align-items: center;">
             <button style="outline: none;color:#d35854;   font-size: 21px;" mat-icon-button (click)="selectedIndex = ''"
                 aria-label="ranking">
                 <mat-icon>cancel</mat-icon>
@@ -344,7 +321,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </div>
         <div class="button-Done" style="display: flex; flex-direction: column; align-items: center;">
             <button style="outline: none;color:#76d354;   font-size: 21px;" mat-icon-button
-                (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, false)" [disabled]="false"
+                (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, false,true)" [disabled]="false"
                 aria-label="ranking">
                 <mat-icon>check_circle</mat-icon>
             </button>
@@ -373,11 +350,11 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     style="display: flex;align-items: center;justify-content: center; flex-direction: column;"
                     [ngClass]="(columnName.includes('Comments') == true)?'red':'blue'"
                     [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
-            (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
-            (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
-            (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
-            (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
-            bmxItem.componentSettings[0].columnWidth + 'px'">
+                    (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
+                    (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
+                    (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
+                    (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
+                    bmxItem.componentSettings[0].columnWidth + 'px'">
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
                     <div *ngIf="(y == 0)" class="header-title " (mouseenter)="selectedColumn = e">
                         <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
@@ -392,7 +369,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                                 </p>
                             </div>
                             <div *ngIf="selectedColumn === e && bmxClientPageOverview && !editSingleTableCells" style="display: flex;flex-direction: row;justify-content: space-around;
-                    position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
+                                position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
                                 (mouseleave)="selectedColumn = ''">
                                 <span class="header-delete-icon" matTooltip="double click to delete column"
                                     matTooltipPosition="above"
@@ -441,29 +418,29 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             </div>
                             <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                             <div style="display: flex;">
-                                <button
-                                    (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
-                                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;
-                    color: white;
-                    min-width: 20px;
-                    line-height: 19px;
-                    padding: 1px 0px;
-                    margin: -12px 6px;
-                    position: absolute;
-                    animation: rubberBand 700ms ease-in  forwards;height: 25px;"
-                                    mat-button>{{bmxItem.componentText[y]['RATE']}}</button>
+                                <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
+                                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25; color: white;
+                                            min-width: 20px;
+                                            line-height: 19px;
+                                            padding: 1px 0px;
+                                            margin: -12px 6px;
+                                            position: absolute;
+                                            animation: rubberBand 700ms ease-in  forwards;height: 25px;"mat-button>
+                                        {{bmxItem.componentText[y]['RATE']}}
+                                </button>
                             </div>
                             <div style="display: flex;gap: 60px;flex-direction: column;">
                                 <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
                                     <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x);maxRuleCounterMinus()"
-                                        *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
-                     color: white;
-                     min-width: 20px;
-                     line-height: 19px;
-                     padding: 2px 0px;
-                     margin: -5px -8px;
-                     position: absolute;
-                     animation: rubberBand 700ms ease-in  forwards;height: 25px;" mat-button>{{criteria.RATE}}</button>
+                                        *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;color: white;
+                                            min-width: 20px;
+                                            line-height: 19px;
+                                            padding: 2px 0px;
+                                            margin: -5px -8px;
+                                            position: absolute;
+                                            animation: rubberBand 700ms ease-in  forwards;height: 25px;" mat-button>
+                                        {{criteria.RATE}}
+                                    </button>
                                 </div>
                             </div>
                             <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
@@ -483,22 +460,16 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             [name]="'rate' + y" [checked]="testName[columnName]"
                             (change)="saveRadioColumValue(columnName, y)">
                         <!-- TEXT_AREA COLUMN COMMENTS-->
-                        <textarea *ngIf="y !== 0 && columnName.includes('Comments')"
-                        cdkTextareaAutosize
-                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                        [cdkAutosizeMaxRows]="10" 
-                        [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
-                        [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'"
-                        [style.textAlign]="'center'"
-                        [style.border]="'1px solid #dddddd'"
-                        class="row-box"
-                        [style.height]="'132px'"
-
-                        [(ngModel)]="testName[columnName]">
+                        <textarea *ngIf="y !== 0 && columnName.includes('Comments')" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" [cdkAutosizeMaxRows]="10"
+                            [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
+                            [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'" [style.textAlign]="'center'"
+                            [style.border]="'1px solid #dddddd'" class="row-box" [style.height]="'132px'"
+                            [(ngModel)]="testName[columnName]">
               </textarea>
-              
 
-                            
+
+
                         <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
                         <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                       columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
@@ -697,14 +668,10 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                         <!-- TEXT_AREA COLUMN-->
                         <div style="display: flex; justify-content: center;">
                             <textarea *ngIf="y !== 0 && columnName.includes('Comments') == true && open(y)"
-                                [style.width]="'95%'" 
-                                [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
-                                cdkTextareaAutosize 
-                                cdkAutosizeMinRows="1" 
-                                cdkAutosizeMaxRows="10"
-                                style="text-align: center; font-size: 16px; border: 1px solid grey; animation: bounceIn 500ms ease-in forwards; padding: 0 4px; margin-bottom: 10px;" 
-                                class="row-box"
-                                [(ngModel)]="testName[columnName]"
+                                [style.width]="'95%'" [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                                cdkTextareaAutosize cdkAutosizeMinRows="1" cdkAutosizeMaxRows="10"
+                                style="text-align: center; font-size: 16px; border: 1px solid grey; animation: bounceIn 500ms ease-in forwards; padding: 0 4px; margin-bottom: 10px;"
+                                class="row-box" [(ngModel)]="testName[columnName]"
                                 [placeholder]="(columnName=='Comments0') ? 'comments' : (columnName=='Comments1') ? 'new names' : 'type here'">
                             </textarea>
                         </div>
@@ -788,3 +755,6 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 <!--📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱 END TABLE GENERATOR 📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱-->
 <app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames"
     [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
+
+<app-names-uploader *ngIf="showFileUploader"  (save)="upLoadNamesAndRationales(testNamesInput, false); showFileUploader = false" [displayedColumns]="columnsNames"
+[dataSource]="dataSource" [isRanking]="bmxItem.componentType" (cancelEvent)="cancelEvent($event)"></app-names-uploader>
