--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -67,12 +67,14 @@
         <div class="row-field">
           <label class="selectLabels">Closing date: </label>
           <mat-form-field appearance="outline" id="project-datepicker" style="width:55%">
-            <input matInput [matDatepicker]="picker" placeholder="Choose a date" (dateChange)="onSelect($event.value)"
-              formControlName="bmxClosingDate">
+            <input matInput [matDatepicker]="picker" placeholder="Choose a date" [value]="selectedDate"
+                   (dateChange)="onSelect($event.value)"
+                   [min]="minDate">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
         </div>
+        
       </div>
       <div>
         <div class="row-field">
